--- a/appengine/standard/angular/cloudbuild.yaml
+++ b/appengine/standard/angular/cloudbuild.yaml
@@ -1,6 +1,10 @@
 steps:
-- name: 'gcr.io/cloud-builders/gcloud'
-  args: ['./test.sh']
-  dir: '/home/loluru1234_1234/gcp-testing/appengine/standard/angular'
-  timeout: 1000s
-  entrypoint: 'bash'
+#First clone the code from Git Repo
+- name: 'gcr.io/cloud-builders/git'
+  args: ['clone','https://github.com/jayakrishna531/gcp-testing.git']
+
+#Second run the appengine deployment
+ - name: 'gcr.io/cloud-builders/gcloud'
+    dir: '/home/loluru1234_1234/gcp-testing/appengine/standard/angular'
+   entrypoint: bash
+   args: ['./test.sh']
