--- a/appengine/standard/angular/cloudbuild.yaml
+++ b/appengine/standard/angular/cloudbuild.yaml
@@ -2,8 +2,7 @@ steps:
 #First clone the code from Git Repo
 - name: 'gcr.io/cloud-builders/git'
   args: ['clone','https://github.com/jayakrishna531/gcp-testing.git']
- - name: 'gcr.io/cloud-builders/gcloud'
-    dir: '/home/loluru1234_1234/gcp-testing/appengine/standard/angular'
-   entrypoint: bash
-   args: ['./test.sh']
-   
+  dir: '/home/loluru1234_1234/gcp-testing/appengine/standard/angular'
+  entrypoint: bash
+  args: ['bash', './test.sh']
+  
