--- a/appengine/standard/angular/cloudbuild.yaml
+++ b/appengine/standard/angular/cloudbuild.yaml
@@ -1,6 +1,7 @@
 steps:
 #First clone the code from Git Repo
 - name: 'gcr.io/cloud-builders/git'
+  dir: '/home/loluru1234_1234/'
   args: ['clone','https://github.com/jayakrishna531/gcp-testing.git']
   dir: '/home/loluru1234_1234/gcp-testing/appengine/standard/angular'
   args: ["/bin/bash", "-l", "-c", "./test.sh"]
