--- a/appengine/standard/angular/cloudbuild.yaml
+++ b/appengine/standard/angular/cloudbuild.yaml
@@ -4,5 +4,5 @@ steps:
   dir: '/home/loluru1234_1234/'
   args: ['clone','https://github.com/jayakrishna531/gcp-testing.git']
   dir: '/home/loluru1234_1234/gcp-testing/appengine/standard/angular'
-  args: ["/bin/bash", "-l", "-c", "./test.sh"]
+  args: ["./test.sh"]
   
